@@ -5,7 +5,7 @@
     <parent>
         <artifactId>TNIL</artifactId>
         <groupId>net.tnemc</groupId>
-        <version>0.1.7.5-Pre-7</version>
+        <version>0.1.7.6-Pre-1</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -39,9 +39,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.0.0-M7</version>
-                <configuration>
-                    <argLine>--enable-preview</argLine>
-                </configuration>
                 <dependencies>
                     <dependency>
                         <groupId>org.apache.maven.surefire</groupId>
@@ -103,7 +100,7 @@
         <dependency>
             <groupId>net.tnemc</groupId>
             <artifactId>TNIL-Core</artifactId>
-            <version>0.1.7.5-Pre-7</version>
+            <version>0.1.7.6-Pre-1</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
